# explore-persona-space

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  EXPERIMENT_QUEUE.md  README.md  RESULTS.md  pyproject.toml
.claude/: settings.json
configs/: config.yaml
docs/: TODO.md  issue-226-verification-anchors.md  research_ideas.md
eval_results/: INDEX.md
figures/: FIGURE_INDEX.md  INDEX.md
research_log/: LOG.md
scripts/: _install_tokenizer_patch.py  aggregate_issue228.py  analyze_100_persona_source_filtered.py  analyze_axis_tails.py  analyze_category_projections.py  analyze_causal_proximity.py  analyze_cot_tracking.py  analyze_em_axis.py  analyze_issue_257.py  analyze_leakage.py  analyze_manifold_axes.py  analyze_outliers_pertoken.py  analyze_results.py  analyze_single_token_sweep.py  assemble_capability_training.py  benchmark_lora_perf.py  benchmark_tier1.py  bootstrap_pod.sh  build_capability_leakage_data.py  build_deconfounded_data.py  build_dose_response_data.py  build_dpo_midtrain_data.py  build_language_inversion_data.py  build_misalignment_leakage_data.py  build_robustness_ablation_data.py  build_sft_datasets.py  cleanup_pod.py  compute_js_convergence_228.py  compute_js_divergence.py  compute_zelthari_centered_cosine.py  curate_broad_prompts.py  detect_cluster.sh  download_arc_data.py  download_capability_datasets.py  download_data.py  download_tulu.py  env_setup.sh  eval.py  eval_causal_ckpt.py  eval_dissociation_inference.py  (+172 more)
tests/: test_body_promote.py  test_config.py  test_data_validation.py  test_dataset_builder.py  test_eval_utils.py  (+13 more)
(+653 files in other folders)
